# Stud

./: .gitignore  CMakeLists.txt  LICENSE
include/: Constants.h
include/bStream/: bstream.h
include/io/: CommandBinary.h  ObjectBinary.h  StudioBinary.h
src/: main.cpp
src/bStream/: bstream.cpp
src/io/: ObjectBinary.cpp  StudioBinary.cpp
